[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/chatmessage.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/crosshairs/crosshair6.png" type="Texture" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/map.gd" type="Script" id=4]

[sub_resource type="GDScript" id=1]

script/source = "extends Control\n\nvar enabled = true\nvar timer = 0\nvar endtime = 0.1\n\nfunc _ready():\n\tset_process(true)\n\tvar screensize = OS.get_window_size() /2\n\tget_node(\"hud/crosshair\").set_pos(screensize)\n\t\nfunc _process(dt):\n\tget_node(\"fps\").set_text(\"FPS : \" + str(OS.get_frames_per_second()))"

[node name="main" type="Node"]

[node name="gui" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 1 )

[node name="chat" type="Control" parent="gui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="chatmessage" type="RichTextLabel" parent="gui/chat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 700.0
margin/top = 210.0
margin/right = 951.0
margin/bottom = 330.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="textbox" type="LineEdit" parent="gui/chat"]

visibility/visible = false
visibility/self_opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 700.0
margin/top = 330.0
margin/right = 950.0
margin/bottom = 356.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hud" type="Control" parent="gui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="crosshair" type="Sprite" parent="gui/hud"]

texture = ExtResource( 2 )

[node name="menu" type="Control" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 3 )
__meta__ = { "_edit_lock_":true }

[node name="net" type="Panel" parent="gui/menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 130.0
margin/right = 450.0
margin/bottom = 350.0

[node name="playerslider" type="HSlider" parent="gui/menu/net"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 104.0
margin/top = 71.0
margin/right = 197.0
margin/bottom = 87.0
range/min = 1.0
range/max = 32.0
range/step = 1.0
range/page = 0.0
range/value = 32.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="label1" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 33.0
margin/top = 154.0
margin/right = 107.0
margin/bottom = 174.0
text = "Server Port:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label2" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 126.0
margin/right = 105.0
margin/bottom = 146.0
text = "Server Address :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label6" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 27.0
margin/top = 21.0
margin/right = 131.0
margin/bottom = 41.0
text = "Player name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label3" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 102.0
margin/right = 105.0
margin/bottom = 122.0
text = "Map List :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label4" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 72.0
margin/right = 102.0
margin/bottom = 92.0
text = "Max Player:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label5" type="Label" parent="gui/menu/net"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 115.0
margin/top = 60.0
margin/right = 188.0
margin/bottom = 74.0
text = "32"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="address" type="LineEdit" parent="gui/menu/net"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 121.0
margin/right = 197.0
margin/bottom = 145.0
text = "localhost"
placeholder/alpha = 0.6
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="playername" type="LineEdit" parent="gui/menu/net"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 111.0
margin/top = 14.0
margin/right = 202.0
margin/bottom = 38.0
text = "Guy"
placeholder/alpha = 0.6
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="port" type="LineEdit" parent="gui/menu/net"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 109.0
margin/top = 151.0
margin/right = 200.0
margin/bottom = 175.0
text = "3000"
placeholder/alpha = 0.6
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="maplist" type="OptionButton" parent="gui/menu/net"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 95.0
margin/right = 199.0
margin/bottom = 121.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "test"
flat = false
align = 0
selected = 0
items = [ "test", null, false, 0, null, "map1", null, false, 1, null ]

[node name="campaign" type="Button" parent="gui/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 210.0
margin/right = 208.0
margin/bottom = 250.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Server"
flat = false

[node name="host" type="Button" parent="gui/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 78.0
margin/top = 137.0
margin/right = 233.0
margin/bottom = 173.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Host Server"
flat = false

[node name="connect" type="Button" parent="gui/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 260.0
margin/right = 208.0
margin/bottom = 300.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false

[node name="game" type="Control" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="fps" type="Label" parent="gui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 962.0
margin/top = 8.0
margin/right = 1002.0
margin/bottom = 22.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="load" type="Control" parent="gui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="bar" type="ProgressBar" parent="gui/load"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 540.0
margin/right = 740.0
margin/bottom = 570.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="env" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 4 )

[connection signal="focus_enter" from="gui/chat/chatmessage" to="gui/chat" method="_on_chatmessage_focus_enter"]

[connection signal="value_changed" from="gui/menu/net/playerslider" to="gui/menu" method="_on_HSlider_value_changed"]

[connection signal="pressed" from="gui/menu/campaign" to="gui/menu" method="_on_campaign_pressed"]

[connection signal="pressed" from="gui/menu/host" to="gui/menu" method="_on_host_pressed"]

[connection signal="pressed" from="gui/menu/connect" to="gui/menu" method="_on_connect_pressed"]


